--- a/theme/styles/paperweight-prism-theme.css
+++ b/theme/styles/paperweight-prism-theme.css
@@ -27,7 +27,6 @@ pre {
 /* Code blocks */
 pre {
 	overflow: auto;
-	width: 92vw;
 }
 
 /* Inline code */
